--- a/src/yags-mini/variables.css
+++ b/src/yags-mini/variables.css
@@ -1,20 +1,21 @@
 :root {
   /** colors */
-$colors
+$colors$
   
   /** general */
-  --font-family: $font;
-  --display-image: $displayImage;
+  --font-family: $font$;
+  --font-size: $fontSize$;
+  --display-image: $displayImage$;
 
   /** surface */
-  --surface-maxWidth: $maxWidth;
-  --surface-shadow: $shadow;
-  --surface-borderRadius: $borderRadius;
+  --surface-maxWidth: $maxWidth$;
+  --surface-shadow: $shadow$;
+  --surface-borderRadius: $borderRadius$;
 
   /** spacing */
-$spacing
+$spacing$
 
   /** others */
   --picture-size: 300px;
-  --group-count: $groupCount;
+  --group-count: $groupCount$;
 }
